Share UI minor fixes: My Sites dashlet toolbar layout issue. Header menu items now have bigger clickable area. Creating a site will automatically add it to your favourites for easier rediscovery.
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@23086 7033f55c-6c29-4ad8-afba-765cb616e738

Former-commit-id: 71cda35c81d7d3eb3235dcda25686a38c387d992

--- a/root/projects/slingshot/source/web/components/header/header.css
+++ b/root/projects/slingshot/source/web/components/header/header.css
@@ -26,6 +26,12 @@
    padding: 4px 15px;
 }
 
+.header .yuimenu .bd ul li.yuimenuitem .yuimenuitemlabel a
+{
+   display: block;
+   text-decoration: none;
+}
+
 /* Menu: Selected state */
 
 .header .yuimenu .bd ul li.yuimenuitem-selected
@@ -89,6 +95,7 @@
 .header .app-items span.yui-button span.first-child button
 {
    padding: 18px 4px 0;
+   text-decoration: none;
 }
 
 .header .app-items span.yui-button span.first-child button
